--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,3 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
@@ -13,8 +6,153 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+   <app-nav></app-nav>
+
+  <div id="container flex "> 
+
+    <ion-grid>
+      <div class="separator">
+      <ion-row>
+        
+        <!-- video -->
+        <ion-col size="auto">
+          <video controls width="100%" height="auto" autoplay="true" loop="true">
+            <source src="{{video.url}} "type="video/mp4"> 
+            Votre navigateur ne prend pas en charge la lecture vidéo.
+          </video>
+        </ion-col>
+
+        <!-- Description video -->
+
+        <ion-col>
+          <ion-text>{{video.title}}</ion-text>
+        </ion-col>
+      </ion-row>
+      
+      <ion-row>
+        <ion-col>
+          <ion-chip click="navigate()">
+            <ion-avatar >
+              <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+            </ion-avatar>
+
+            <ion-grid>
+            <ion-row>
+            <ion-label>{{chaine.name}}</ion-label>
+          </ion-row>
+          <ion-row>
+            <ion-text>{{chaine.sub}} Abonnées</ion-text>
+            </ion-row>
+          </ion-grid>
+
+          </ion-chip>
+          <ion-button shape="round" fill="{{colorSub}}" color="dark"  (click)="onClickSubb()">Sub</ion-button>
+        </ion-col>
+        <ion-row>
+          <ion-col>
+            <ion-button class="like" id="like" fill="{{colorLike}}" color="success" (click)="onClickLike()" > <ion-icon name="thumbs-up"></ion-icon> {{video.liked}}</ion-button>
+            <ion-button class="dislike" fill="{{colorDislike}}" color="danger" (click)="onClickDislike()"><ion-icon name="thumbs-down"></ion-icon> {{video.disliked}}</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-row>
+      <br>
+    </div>
+
+    <br>
+    <br>
+      <br>
+      <br>
+      
+      <!-- Description -->
+
+      <div class="description-video">
+      <ion-row>
+        <ion-col>
+          <ion-text>
+            {{video.view}} vues,
+          </ion-text>
+
+          <ion-text>
+            vidéo publiée depuis le {{video.upload  | date:'dd/MM/yyyy' }}
+          </ion-text>
+          <br>
+          <br>
+          <ion-text>
+           {{video.description}}
+          </ion-text>
+        </ion-col>
+      </ion-row>
+    </div>
+      <br>
+
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+      <!-- Espace commentaire-->
+      <br>
+      <ion-text>{{video.comments.length}} Commentaire</ion-text>
+      <br>
+      <br>
+
+      <ion-row>
+        <ion-col>
+          
+          <!-- Ajouter un commentaire-->
+          <ion-item>
+          <ion-chip click="navigate()">
+            <ion-avatar >
+              <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+            </ion-avatar>
+            <ion-label>{{user1.nickname}}</ion-label>
+          </ion-chip>
+
+            <ion-input id="commentaire" placeholder="Ajouter un commentaire..." [(ngModel)]="commentaire"></ion-input>
+            <ion-button fill="outline" color="primary" (click)="onClickAdd()" >Ajouter</ion-button>
+          </ion-item>
+        
+        </ion-col>
+      </ion-row>
+      <br>
+      <br>
+      
+      <!--commentaire video-->
+      <ion-col>
+        <ion-row *ngFor="let commentaire of commentaires">
+          
+          <ion-chip click="navigate()">
+            <ion-avatar >
+              <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+            </ion-avatar>
+            <ion-label>{{commentaire.user.nickname}}</ion-label>
+          </ion-chip>
+          {{commentaire.content}}
+        </ion-row>
+      </ion-col>
+      </ion-col>
+
+      <ion-col class="more-content">
+        <ion-text>Plus de videos</ion-text>
+        <ion-row>
+          <video controls width="40%" height="auto">
+            <source src="{{video.url}} "type="video/mp4"> 
+            Votre navigateur ne prend pas en charge la lecture vidéo.
+          </video>
+          <ion-text>{{chaine.description}}</ion-text>
+        </ion-row>
+
+        <ion-row>
+        <video controls width="40%" height="auto">
+          <source src="{{video.url}} "type="video/mp4"> 
+          Votre navigateur ne prend pas en charge la lecture vidéo.
+        </video>
+        <ion-text>{{chaine.description}}</ion-text>
+      </ion-row>
+      </ion-col>
+      </ion-row>
+      </ion-grid>
+    </ion-grid>
+
+    
   </div>
+
 </ion-content>
