--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,19 @@
 #container a {
   text-decoration: none;
 }
+
+
+.separator{
+  border-bottom: 0.5px solid black;
+}
+
+
+.description-video {
+  background-color: #8c8c8c31;
+  border-radius: 15px;
+  box-shadow: 0px 5px 10px black;
+}
+
+.more-content{
+margin-top: 150px;
+}
